# itsamecube

./: Cargo.toml  README.md
assets/: test.sinkimage
src/: appsink.rs  main.rs
